--- a/app/src/main/res/layout/item_clip.xml
+++ b/app/src/main/res/layout/item_clip.xml
@@ -5,36 +5,71 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/user_profile"
+        android:id="@+id/user_profile_image"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/image_desc"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/clip_title_icon"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="8dp"
+        android:contentDescription="@string/image_desc"
+        android:src="@drawable/ic_clip"
+        app:layout_constraintBottom_toTopOf="@id/user_icon"
+        app:layout_constraintStart_toEndOf="@+id/user_profile_image"
+        app:layout_constraintTop_toTopOf="@id/user_profile_image" />
+
     <TextView
-        android:id="@+id/username"
+        android:id="@+id/clip_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="4dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="@color/white"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="@id/user_profile"
-        app:layout_constraintLeft_toRightOf="@+id/user_profile"
-        app:layout_constraintTop_toTopOf="@id/user_profile" />
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@id/user_name"
+        app:layout_constraintStart_toEndOf="@+id/clip_title_icon"
+        app:layout_constraintTop_toTopOf="@id/user_profile_image" />
 
     <ImageView
-        android:id="@+id/view_img"
+        android:id="@+id/user_icon"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="8dp"
+        android:contentDescription="@string/image_desc"
+        android:src="@drawable/ic_profile"
+        app:layout_constraintBottom_toBottomOf="@id/user_profile_image"
+        app:layout_constraintStart_toEndOf="@+id/user_profile_image"
+        app:layout_constraintTop_toBottomOf="@id/clip_title_icon" />
+
+    <TextView
+        android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="4dp"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@id/user_profile_image"
+        app:layout_constraintStart_toEndOf="@+id/user_icon"
+        app:layout_constraintTop_toBottomOf="@id/clip_title" />
+
+    <ImageView
+        android:id="@+id/view_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
         android:contentDescription="@string/image_desc"
-        android:src="@drawable/ic_eye"
-        app:layout_constraintBottom_toBottomOf="@id/user_profile"
-        app:layout_constraintRight_toLeftOf="@+id/viewer"
-        app:layout_constraintTop_toTopOf="@id/user_profile" />
+        android:src="@drawable/ic_play_arrow"
+        app:layout_constraintBottom_toBottomOf="@id/user_profile_image"
+        app:layout_constraintEnd_toStartOf="@+id/viewer"
+        app:layout_constraintTop_toTopOf="@id/user_profile_image" />
 
     <TextView
         android:id="@+id/viewer"
@@ -43,39 +78,71 @@
         android:layout_marginEnd="12dp"
         android:textColor="@color/white"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@id/user_profile"
+        app:layout_constraintBottom_toBottomOf="@id/user_profile_image"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/view_img"
-        app:layout_constraintTop_toTopOf="@id/user_profile" />
+        app:layout_constraintTop_toTopOf="@id/user_profile_image" />
 
-    <androidx.cardview.widget.CardView
+    <FrameLayout
         android:id="@+id/thumbnail_card"
         android:layout_width="280dp"
         android:layout_height="160dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:cardCornerRadius="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/gamename"
-        app:layout_constraintLeft_toRightOf="@id/user_profile"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_profile">
+        app:layout_constraintBottom_toTopOf="@+id/game_name"
+        app:layout_constraintStart_toStartOf="@id/user_icon"
+        app:layout_constraintTop_toBottomOf="@+id/user_profile_image">
 
         <ImageView
             android:id="@+id/thumbnail"
-            android:layout_width="280dp"
-            android:layout_height="160dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:contentDescription="@string/image_desc" />
 
-    </androidx.cardview.widget.CardView>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:background="@drawable/video_time_background"
+            android:orientation="horizontal"
+            android:padding="2dp">
 
-    <ToggleButton
+            <ImageView
+                android:id="@+id/time_icon"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginEnd="2dp"
+                android:contentDescription="@string/image_desc"
+                android:src="@drawable/ic_time"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/clip_duration"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/clip_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/time_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/time_icon"
+                app:layout_constraintTop_toTopOf="@+id/time_icon" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </FrameLayout>
+
+    <ImageView
         android:id="@+id/heart_icon"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:background="@drawable/ic_favorite"
-        app:layout_constraintBottom_toBottomOf="@+id/gamename"
-        app:layout_constraintLeft_toLeftOf="@+id/thumbnail_card"
-        app:layout_constraintTop_toTopOf="@+id/gamename" />
+        app:layout_constraintBottom_toBottomOf="@+id/game_name"
+        app:layout_constraintStart_toStartOf="@+id/thumbnail_card"
+        app:layout_constraintTop_toTopOf="@+id/game_name" />
 
     <ImageView
         android:id="@+id/lang_icon"
@@ -84,9 +151,9 @@
         android:layout_marginEnd="6dp"
         android:contentDescription="@string/image_desc"
         android:src="@drawable/ic_language"
-        app:layout_constraintBottom_toBottomOf="@+id/gamename"
-        app:layout_constraintRight_toLeftOf="@+id/lang"
-        app:layout_constraintTop_toTopOf="@+id/gamename" />
+        app:layout_constraintBottom_toBottomOf="@+id/game_name"
+        app:layout_constraintEnd_toStartOf="@+id/lang"
+        app:layout_constraintTop_toTopOf="@+id/game_name" />
 
     <TextView
         android:id="@+id/lang"
@@ -95,9 +162,9 @@
         android:layout_marginEnd="8dp"
         android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/gamename"
-        app:layout_constraintRight_toLeftOf="@+id/game_title_icon"
-        app:layout_constraintTop_toTopOf="@+id/gamename" />
+        app:layout_constraintBottom_toBottomOf="@id/game_name"
+        app:layout_constraintEnd_toStartOf="@+id/game_title_icon"
+        app:layout_constraintTop_toTopOf="@+id/game_name" />
 
     <ImageView
         android:id="@+id/game_title_icon"
@@ -106,19 +173,30 @@
         android:layout_marginEnd="6dp"
         android:contentDescription="@string/image_desc"
         android:src="@drawable/game_icon"
-        app:layout_constraintBottom_toBottomOf="@id/gamename"
-        app:layout_constraintRight_toLeftOf="@id/gamename"
-        app:layout_constraintTop_toTopOf="@id/gamename" />
+        app:layout_constraintBottom_toBottomOf="@id/game_name"
+        app:layout_constraintEnd_toStartOf="@id/game_name"
+        app:layout_constraintTop_toTopOf="@id/game_name" />
 
     <TextView
-        android:id="@+id/gamename"
+        android:id="@+id/game_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="6dp"
         android:layout_marginBottom="8dp"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/viewer" />
+        app:layout_constraintEnd_toStartOf="@id/game_icon" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/game_icon"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="6dp"
+        android:contentDescription="@string/image_desc"
+        app:layout_constraintBottom_toBottomOf="@id/game_title_icon"
+        app:layout_constraintEnd_toEndOf="@id/viewer"
+        app:layout_constraintTop_toTopOf="@id/game_title_icon" />
 
     <View
         android:layout_width="fill_parent"
