--- a/app/src/main/res/layout/item_stream_load_state.xml
+++ b/app/src/main/res/layout/item_stream_load_state.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:text="@string/network_error_msg"
         android:textSize="16sp"
+        android:textColor="@color/white"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_retry"
