--- a/app/src/main/res/layout/item_clip.xml
+++ b/app/src/main/res/layout/item_clip.xml
@@ -76,12 +76,24 @@
         android:id="@+id/viewer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="36dp"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/user_profile_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/user_profile_image" />
+
+    <ImageView
+        android:id="@+id/btn_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/image_desc"
+        android:src="@drawable/ic_menu"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/viewer"
+        app:layout_constraintStart_toEndOf="@+id/viewer"
+        app:layout_constraintTop_toTopOf="@+id/viewer" />
 
     <FrameLayout
         android:id="@+id/thumbnail_card"
