--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -1,174 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/swipe_layout"
+    android:id="@+id/item_favorite"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    app:dragEdge="right"
-    app:mode="same_level">
+    android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/delete_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@android:color/holo_red_light"
-        android:gravity="center"
-        android:orientation="vertical">
+    <FrameLayout
+        android:id="@+id/thumbnail_card"
+        android:layout_width="80dp"
+        android:layout_height="60dp"
+        android:layout_marginVertical="4dp"
+        android:layout_marginStart="8dp"
+        app:cardCornerRadius="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginHorizontal="16dp"
+            android:id="@+id/thumbnail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/image_desc" />
+
+        <ImageView
+            android:id="@+id/play"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:contentDescription="@string/image_desc"
-            android:src="@drawable/ic_delete"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:src="@drawable/ic_play" />
 
-    </LinearLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:id="@+id/item_favorite"
-        android:layout_height="wrap_content">
-
-        <FrameLayout
-            android:id="@+id/thumbnail_card"
-            android:layout_width="80dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginVertical="4dp"
-            app:cardCornerRadius="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:background="@drawable/video_time_background"
+            android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/thumbnail"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/image_desc" />
-
-            <ImageView
-                android:id="@+id/play"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:id="@+id/time_icon"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginEnd="2dp"
                 android:contentDescription="@string/image_desc"
-                android:src="@drawable/ic_play" />
+                android:src="@drawable/ic_time"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/clip_duration"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <TextView
+                android:id="@+id/clip_duration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:background="@drawable/video_time_background"
-                android:orientation="horizontal">
+                android:layout_marginEnd="2dp"
+                android:textColor="@color/white"
+                android:textSize="11sp"
+                app:layout_constraintBottom_toBottomOf="@+id/time_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/time_icon"
+                app:layout_constraintTop_toTopOf="@+id/time_icon" />
 
-                <ImageView
-                    android:id="@+id/time_icon"
-                    android:layout_width="10dp"
-                    android:layout_height="10dp"
-                    android:layout_marginStart="2dp"
-                    android:layout_marginEnd="2dp"
-                    android:contentDescription="@string/image_desc"
-                    android:src="@drawable/ic_time"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/clip_duration"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <TextView
-                    android:id="@+id/clip_duration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="2dp"
-                    android:textColor="@color/white"
-                    android:textSize="11sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/time_icon"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/time_icon"
-                    app:layout_constraintTop_toTopOf="@+id/time_icon" />
+    </FrameLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/clip_item_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@id/user_icon"
+        app:layout_constraintStart_toEndOf="@+id/thumbnail_card"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        </FrameLayout>
+    <ImageView
+        android:id="@+id/btn_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/image_desc"
+        android:src="@drawable/ic_menu"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        <TextView
-            android:id="@+id/clip_item_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@id/user_icon"
-            app:layout_constraintStart_toEndOf="@+id/thumbnail_card"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/user_icon"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="8dp"
+        android:contentDescription="@string/image_desc"
+        android:src="@drawable/ic_profile"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/thumbnail_card"
+        app:layout_constraintTop_toBottomOf="@id/clip_item_title" />
 
-        <ImageView
-            android:id="@+id/user_icon"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginStart="8dp"
-            android:contentDescription="@string/image_desc"
-            android:src="@drawable/ic_profile"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/thumbnail_card"
-            app:layout_constraintTop_toBottomOf="@id/clip_item_title" />
+    <TextView
+        android:id="@+id/user_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:textColor="@color/gray"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@id/user_icon"
+        app:layout_constraintStart_toEndOf="@+id/user_icon"
+        app:layout_constraintTop_toTopOf="@id/user_icon" />
 
-        <TextView
-            android:id="@+id/user_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:textColor="@color/gray"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@id/user_icon"
-            app:layout_constraintStart_toEndOf="@+id/user_icon"
-            app:layout_constraintTop_toTopOf="@id/user_icon" />
+    <ImageView
+        android:id="@+id/view_img"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:contentDescription="@string/image_desc"
+        android:src="@drawable/ic_play_arrow"
+        app:layout_constraintBottom_toBottomOf="@id/user_name"
+        app:layout_constraintStart_toEndOf="@id/user_name"
+        app:layout_constraintTop_toTopOf="@id/user_name" />
 
-        <ImageView
-            android:id="@+id/view_img"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:contentDescription="@string/image_desc"
-            android:src="@drawable/ic_play_arrow"
-            app:layout_constraintBottom_toBottomOf="@id/user_name"
-            app:layout_constraintStart_toEndOf="@id/user_name"
-            app:layout_constraintTop_toTopOf="@id/user_name" />
+    <TextView
+        android:id="@+id/viewer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/gray"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/view_img"
+        app:layout_constraintStart_toEndOf="@id/view_img"
+        app:layout_constraintTop_toTopOf="@id/view_img" />
 
-        <TextView
-            android:id="@+id/viewer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textColor="@color/gray"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/view_img"
-            app:layout_constraintStart_toEndOf="@id/view_img"
-            app:layout_constraintTop_toTopOf="@id/view_img" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/game_image"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="8dp"
+        android:contentDescription="@string/image_desc"
+        app:layout_constraintBottom_toBottomOf="@id/user_name"
+        app:layout_constraintStart_toEndOf="@id/viewer"
+        app:layout_constraintTop_toTopOf="@id/user_name" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/game_image"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginStart="8dp"
-            android:contentDescription="@string/image_desc"
-            app:layout_constraintBottom_toBottomOf="@id/user_name"
-            app:layout_constraintStart_toEndOf="@id/viewer"
-            app:layout_constraintTop_toTopOf="@id/user_name" />
+    <View
+        android:id="@+id/bottom_line_item"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@color/theme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <View
-            android:id="@+id/bottom_line_item"
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="@color/theme"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</com.chauthai.swipereveallayout.SwipeRevealLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
